# mina

ios/: .gitignore  Makefile  README.md
ios/ApolloCodegen/: .gitignore  Package.swift  README.md
ios/mina/: AppDelegate.swift  CallStore.swift  ErrorStore.swift  FirstView.swift  GlobalEnvironment.swift  Info.plist  InitialDataStore.swift  LoginView.swift  PartnerSearchView.swift  RootView.swift  SceneDelegate.swift  Store.swift  VideoView.swift
ios/mina.xcodeproj/: project.pbxproj
ios/mina/Components/: Card.swift  Color.swift  PartnerCard.swift  SigninWithAppleButton.swift  VideoWindow.swift
ios/mina/GraphQL/: API.swift  AcceptPartnerRequest.graphql  AddCallSchedule.graphql  GetMe.graphql  GraphQL+AcceptPartnerRequest.swift  GraphQL+AddCallSchedule.swift  GraphQL+GetMe.swift  GraphQL+SearchPartner.swift  GraphQL+SendPartnerRequest.swift  GraphQL+SetApplePushToken.swift  GraphQL+SignupAsAnonymous.swift  GraphQL.swift  SearchPartner.graphql  SendPartnerRequest.graphql  SignupAsAnonymous.graphql
ios/mina/Manager/: CallManager.swift  CallSessionManager.swift
ios/mina/Models/: Partner.swift  PartnerRequest.swift  Relationship.swift  User.swift
ios/mina/Secrets/: Secrets.swift  secrets.template.plist
ios/mina/Services/: ApiService.swift  CallService.swift  KeychainService.swift  PushService.swift  SkyWayService.swift
ios/mina/Views/: AddCallScheduleView.swift  FirstView.swift  OnboardingView.swift  PartnerSearchView.swift  PartnerView.swift  RelationshipView.swift  RequestPushNotification.swift  RootView.swift  VideoView.swift
ios/minaTests/: GraphQLTests.swift  RelationshipTest.swift  minaTests.swift
mina/: AppDelegate.swift  ContentView.swift  LoginView.swift  SceneDelegate.swift
mina.xcodeproj/: project.pbxproj
mina.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mina/Components/: SigninWithAppleButton.swift
mina/Models/: User.swift
mina/Services/: ApiService.swift  CallService.swift  PushService.swift
mina/Utils/: KeychainService.swift  PushService.swift
minaTests/: minaTests.swift
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.empty  Makefile.toml  README.md  cloudbuild.yaml  cloudbuild.yml  schema.graphql  schema.json
server/mina-app/: Cargo.toml
server/mina-app/examples/: print_graphql_introspection.rs  print_graphql_schema.rs  send_push_notification.rs
server/mina-app/src/: auth.rs  lib.rs  main.rs  server.rs
server/mina-app/src/graphql/: mod.rs  mutation.rs  query.rs  schema.rs
server/mina-app/src/graphql/objects/: me.rs  mod.rs  my_relationship.rs  partner_request.rs  user.rs
server/mina-app/src/infra/apple/push/: .client.rs.swo  client.rs  mod.rs  token.rs
server/mina-app/src/routes/: graphql.rs  mod.rs
server/mina-app/src/routes/cron/: invoke_ready_calls.rs  mod.rs
server/mina-app/src/routes/graphql/: mod.rs  playground.rs
server/mina-domain/: Cargo.toml
server/mina-domain/src/: cred.rs  lib.rs
server/mina-domain/src/call/: mod.rs  repository.rs
server/mina-domain/src/partner_request/: mod.rs  repository.rs
server/mina-domain/src/relationship/: mod.rs  repository.rs
server/mina-domain/src/user/: mod.rs  repository.rs
server/mina-infra/: Cargo.toml
server/mina-infra/migrations/: V1__users.sql
server/mina-infra/src/repository/: mod.rs  test_utils.rs  user.rs
server/mina-infra/src/repository/partner_request/: mod.rs  pg.rs
server/mina-infra/src/repository/relationship/: mod.rs  pg.rs
server/mina-infra/src/repository/user/: mod.rs  pg.rs
server/mina-usecase/: Cargo.toml
server/mina-usecase/src/: accept_partner_request.rs  add_call_schedule.rs  auth.rs  lib.rs  publish_partner_request.rs  send_partner_request.rs  signup.rs
server/musl-build/: Dockerfile  entrypoint.sh
server/src/: apns.rs  main.rs
server/src/apns/: client.rs  (+1 more)
webrtc-web-impl/: index.html  script.js
(+22 files in other folders)
