[package]
name = "mina-app"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.0.9"
async-graphql-warp = "2.0.9"
async-trait = "0.1.41"
chrono = "0.4.19"
futures = "0.3.7"
headers = "0.3.2"
jsonwebtoken = "7.2.0"
log = "0.4.11"
mina-domain = { path = "../mina-domain" }
mina-infra = { path = "../mina-infra" }
mina-usecase = { path = "../mina-usecase" }
pretty_env_logger = "0.4.0"
rand = "0.7.3"
rego = "0.1.1"
reqwest = { version = "0.10.8", features = ["json"] }
serde = "1.0.116"
tokio = { version = "0.2.22", features = ["full"] }
uuid = "0.8.1"
warp = "0.2.5"

[dev-dependencies]
tokio-test = "0.2.1"
