[package]
name = "mina-domain"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
async-trait = "0.1.41"
bit-vec = "0.6.2"
chrono = "0.4.19"
pbkdf2 = "0.6.0"
rand = "0.7.3"
rego = "0.1.1"
uuid = { version = "0.8.1", features = ["v4"] }
