[package]
name = "mina-infra"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
chrono = { version = "0.4.19", features = ["serde"] }
dataloader = { version = "0.12.0", default-features = false, features = ["runtime-tokio"] }
futures = "0.3.7"
lazycell = "1.3.0"
log = "0.4.11"
mina-domain = { path = "../mina-domain" }
native-tls = "0.2.4"
postgres-native-tls = "0.3.0"
refinery = { version = "0.4.0", features = ["tokio-postgres"] }
rego = "0.1.1"
tokio = { version = "0.2", features = ["rt-core"] }
tokio-postgres = { version = "0.5.0", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[dev-dependencies]
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
tokio = { version = "0.2", features = ["full"] }
